--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "moment": "^2.22.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -31,7 +32,9 @@
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
+    "@types/moment-timezone": "^0.5.4",
     "@types/node": "~6.0.60",
+    "@types/uuid": "^3.4.3",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
